# talent-plan

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-requirement.md  question.md
courses/: README.md  tp101-intro-to-oss.md  tp102-how-to-use-git-github.md  tp103-open-source-community.md
courses/dss/: Makefile
courses/dss/labcodec/: Cargo.toml  build.rs
courses/dss/labrpc/: Cargo.toml
courses/dss/labrpc/benches/: rpc.rs
courses/dss/labrpc/examples/: echo.rs
courses/dss/labrpc/src/: client.rs  error.rs  lib.rs  macros.rs  network.rs
courses/dss/linearizability/: Cargo.toml
courses/dss/percolator/: Cargo.toml  build.rs
courses/dss/percolator/proto/: msg.proto
courses/dss/percolator/src/: client.rs  lib.rs  server.rs  service.rs  tests.rs
courses/dss/raft/: Cargo.toml  README.md  build.rs
courses/dss/raft/src/: lib.rs
courses/dss/raft/src/kvraft/: client.rs  config.rs  server.rs  tests.rs
courses/dss/raft/src/proto/: mod.rs  raft.proto
courses/dss/raft/src/raft/: append_entries.rs  config.rs  heartbeat.rs  mod.rs  msg.rs  paper_tests.rs  persister.rs  state.rs  tests.rs  vote.rs
courses/rust/: README.md
courses/rust/building-blocks/: bb-1.md  bb-3.md
courses/rust/docs/: lesson-plan.md  prerequisites.md  roadmap.md
courses/rust/projects/project-3/: Cargo.toml  README.md
courses/rust/projects/project-3/benches/: engine_bench.rs
courses/rust/projects/project-3/src/: common.rs  error.rs  lib.rs  server.rs
courses/rust/projects/project-3/src/engines/: mod.rs  sled.rs
courses/rust/projects/project-3/tests/: cli.rs  kv_store.rs
courses/rust/projects/project-4/: Cargo.toml  README.md
courses/rust/projects/project-4/src/: lib.rs  server.rs
courses/rust/projects/project-4/src/engines/: kvs.rs  sled.rs
courses/rust/projects/project-4/src/thread_pool/: naive.rs  rayon.rs  shared_queue.rs
courses/rust/projects/project-4/tests/: kv_store.rs
courses/tp201-rust/building-blocks/: bb-3.md  bb-4.md
courses/tp201-rust/docs/: what-next.md
courses/tp201-rust/projects/project-2/: Cargo.toml  README.md
courses/tp201-rust/projects/project-2/tests/: tests.rs
courses/tp202-dss/: Makefile
courses/tp202-dss/labcodec/: Cargo.toml  build.rs
courses/tp202-dss/labrpc/: Cargo.toml
courses/tp202-dss/linearizability/: Cargo.toml
dss/: .gitignore  Cargo.toml  Makefile  README.md  WinMakefile  rust-toolchain
dss/.circleci/: config.yml
dss/labcodec/demonstration/: README.md  expanded_fixture.rs
dss/labcodec/proto/: fixture.proto
dss/labcodec/src/: lib.rs
dss/labrpc/: Cargo.toml
dss/labrpc/benches/: rpc.rs
dss/labrpc/examples/: echo.rs
dss/labrpc/src/: error.rs  lib.rs  macros.rs  server.rs
dss/linearizability/: Cargo.toml
dss/linearizability/src/: bitset.rs  lib.rs  model.rs  models.rs
dss/linearizability/test_data/: c10-bad.txt  c50-ok.txt
dss/percolator/: Cargo.toml  README.md  build.rs
dss/percolator/proto/: msg.proto
dss/percolator/src/: lib.rs  server.rs  service.rs  tests.rs
dss/raft/: Cargo.toml  README.md
dss/raft/src/: lib.rs
dss/raft/src/kvraft/: client.rs  config.rs  mod.rs  server.rs  service.rs  tests.rs
dss/raft/src/proto/: kvraft.proto  mod.rs  raft.proto
dss/raft/src/raft/: config.rs  errors.rs  mod.rs  service.rs
dss/src/kvraft/: client.rs  config.rs  errors.rs  server.rs  tests.rs
dss/src/raft/: config.rs  errors.rs  mod.rs  persister.rs  tests.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
labcodec/: Cargo.toml
labcodec/src/: lib.rs
labrpc/: Cargo.toml
labrpc/examples/: echo.rs
labrpc/src/: error.rs  lib.rs  macros.rs
linearizability/src/: lib.rs
rust/: .gitignore  CONTRIBUTING.md  README.md  index.html  lesson-plan.md  notes.md  plan.md  prerequisites.md  roadmap.md
rust/building-blocks/: bb-1.md  bb-2.md  bb-3.md  bb-4.md  bb-5.md
rust/css/: style.css  text.css
rust/docs/: lesson-plan.md  prerequisites.md  roadmap.md
rust/docs/etc/: notes.md
rust/js/: common.js  init.js  lesson-slides-mode.js  lesson-text-mode.js  md-mode.js  require.js
rust/lessons/: whirlwind.md
rust/projects/async/: project.md
rust/projects/file-io/: Cargo.toml  project.md
rust/projects/file-io/src/: error.rs  kv.rs
rust/projects/file-io/tests/: tests.rs
rust/projects/networking/: Cargo.toml  project.md
rust/projects/parallelism/: Cargo.toml  project.html  (+1 more)
rust/projects/project-1/: Cargo.toml  README.md  project.md
rust/projects/project-1/src/: kv.rs  lib.rs
rust/projects/project-3/: Cargo.toml  README.md  project.md
rust/projects/project-3/benches/: engine_bench.rs
rust/projects/project-3/src/: lib.rs
rust/projects/project-3/src/engines/: kvs.rs  mod.rs  sled.rs
rust/projects/project-5/: Cargo.toml  README.md  project.md
rust/projects/project-5/src/: client.rs  common.rs  lib.rs  server.rs
rust/projects/project-5/src/engines/: kvs.rs  mod.rs  sled.rs
rust/projects/project-5/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
rust/projects/project-5/tests/: kv_store.rs  thread_pool.rs
src/: lib.rs
src/kvraft/: client.rs  config.rs  errors.rs  mod.rs  server.rs  service.rs  tests.rs
src/raft/: config.rs  errors.rs  mod.rs  tests.rs
talent-challenge-program/: MENTEE_APPLY_TEMPLATE.md  PROJECT_IDEA_TEMPLATE.md  README.md  project-ideas.md  s1.md  selected-projects.md
talent-challenge-program2021/: MENTEE_APPLY_TEMPLATE.md  PROJECT_IDEA_TEMPLATE.md  README.md  project-ideas.md  schedule.md  selected-projects.md
talent-plan-1.0/: 1.0-lp-tidb.md  1.0-lp-tikv.md  README-CN.md
tidb/: README.md
tidb/join/: Makefile  README.md  benchmark_test.go  go.mod  go.sum  join.go  join_example.go  join_test.go
tidb/mapreduce/: .gitignore  Makefile  README.md  casegen.go  go.mod  go.sum  main.go  mapreduce.go  urltop10.go  urltop10_example.go  urltop10_test.go  utils.go  utltop10_test.go
tidb/mergesort/: Makefile  README.md  bench_test.go  cpuprofile_InserSort  go.mod  go.sum  mergesort.go  mergesort_test.go
(+99 files in other folders)
