[package]
name = "labrpc"
version = "0.1.0"

[dependencies]
labcodec = { path = "../labcodec" }
prost = "0.4"
bytes = "0.4.7"
rand = "0.4"
futures = "0.1"
futures-timer = "0.1"
futures-cpupool = "0.1"
log = "0.4"
hashbrown = "0.1"

[dev-dependencies]
prost-derive = "0.4.0"
env_logger = "0.6"
lazy_static = "1.2"
