[package]
name = "percolator"
version = "0.1.0"
authors = ["Ryan Leung <rleungx@gmail.com>"]
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
prost = "0.6"
prost-derive = "0.6"

labrpc = { path = "../labrpc" }
labcodec = { path = "../labcodec" }

[build-dependencies]
prost-build = "0.6"

[dev-dependencies]
env_logger = "0.7"
