[package]
name = "raft"
version = "0.1.0"
authors = [
    "Neil Shen <overvenus@gmail.com>",
    "ShuNing <nolouch@gmail.com>",
    "Connor <zbk602423539@gmail.com>",
    "庄天翼 <zty0826@gmail.com>",
    "MIT 6.824 <6824-staff@lists.csail.mit.edu>"
]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
prost = "0.6"
prost-derive = "0.6"
rand = "0.7"

labcodec = { path = "../labcodec" }
labrpc = { path = "../labrpc" }
linearizability = { path = "../linearizability"}

[dev-dependencies]
env_logger = "0.7"

[build-dependencies]
prost-build = "0.6"
