[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.32.0"

[dev-dependencies]
assert_cmd = "0.11.0"
float-cmp = "=0.4.0" # FIXME: https://github.com/assert-rs/predicates-rs/issues/78
predicates = "1.0.0"
