[package]
name = "kvs"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.0"
structopt = "0.2.15"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
env_logger = "0.6.1"
sled = "0.22.1"

[dev-dependencies]
tempfile = "3.0.7"
walkdir = "2.2.7"
assert_cmd = "0.11"
predicates = "1.0.0"
criterion = "0.2.11"
rand = "0.6.5"

[[bench]]
name = "engine_bench"
harness = false