[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
